--- a/_posts/2021-11-13-金字塔原理读书笔记.md
+++ b/_posts/2021-11-13-金字塔原理读书笔记.md
@@ -1,20 +1,22 @@
 ---
-layout:     post
-title:      金字塔原理-读书笔记
-date:       2021-11-13
-author:     shaokang
+layout: post
+title: 金字塔原理-读书笔记
+date: 2021-11-13
+author: shaokang
 header-img: img/pyramid_principle.jpeg
 catalog: true
 tags:
     - 金字塔原理
 ---
 
-
 ## 前言
+
 金字塔原理除了能够帮助人们以书面形式组织和表达思想意外，还适用于确定问题、分析问题的过程，可以对整个写作过程的组织和管理进行指导。
 
 ## 第一篇 写作的逻辑
+
 ### 引言
+
 背景：多数人无法在写作上取得较大提高的原因是人们在文章中使用的句子过于冗长、表达过于笨挫。又或者其语言过于专业、抽象，段落中的句子关系安排较差。但这受自身的写作风格影响，想要改变难度很大。但文章条理不清的问题是可以通过改变表达思想来改善的。
 
 总体思想：对于读者来说，最容易理解的顺序是先了解主要的、抽象的思想，再是次要的思想。一个总的思想统领多组思想，思想之前的联系可以是纵向的: 上一层的思想是下一层的总结。亦可以是横向的： 多个思想共同组合成一个逻辑，并组合在一起。
@@ -22,13 +24,17 @@ tags:
 本篇主要部分：金字塔对读者的影响；金字塔子结构如何关联；如何将该思想带入文章；思想间的相互关系；演绎和归纳的区别。(这也是我们读完本篇需要了解的内容)
 
 ### 第一章 为什么选择金字塔结构
+
 #### 1.1 金字塔对读者的影响：
+
 当文章篇幅过长，读者需要对每句话都联系起来并融会贯通。如果文章呈金字塔原理，文章的思路从金字塔顶端向下延展，读者就会容易读懂。
+
 1. 大脑自动将信息归纳到不同分组，易于理解。
 2. 归到金字塔结构的思想组更易理解。
 3. 任何书面都需将思想组织成金字塔原理
 
 #### 1.2 如何将思想组织成金字塔：
+
 大脑短期仅能记忆 7 个以内的思想，找出其逻辑关系能方便快速记忆。
 以作者的例子：牛奶、鸡蛋、黄油、酸奶油 => 蛋奶产品；葡萄、桔子、苹果 => 水果；土豆、胡萝卜 => 蔬菜
 
@@ -41,6 +47,7 @@ tags:
     - 每组思想都必须按逻辑顺序（演绎顺序、时间顺序、结构顺序、重要性顺序）组织。
 
 #### 1.3 总结 （个人体会）
+
 金字塔思维的就是以金字塔结构来组织思想，将每组相关性的思想总结归纳成一个概括性思想，并以某种逻辑顺序组合成中心思想来表达出来。这种结构思想能让其他人能容易读懂自己的想法，进行有效的交流。(借鉴网上的例子总结出的结构)比如说给老板汇报一个事情：
 
 如果我们这样：
@@ -52,91 +59,115 @@ tags:
 将每个问题/思想总结归纳成一个中心思考先说过来，然后以各项思想具体展开来铺垫，这样形成的金字塔结构来能让人信服。当成如何形成这种结构可以用这样的办法：1.如果主题明确，以总分的结构来描述（自上而下表达）。2.如果主题不明，以分总的形式进行归纳（自下而上思考）。
 
 ### 第二章 金字塔中的子结构
+
 不用一开始就幻想将思想组织成金字塔结构，我们可以先快速组建其中的子结构。这些子结构是：
+
 1. 主题和子主题之间的纵向关系
 2. 子主题之间的横向关系
 3. 序言的讲故事式结构
 
 #### 2.1 纵向结构
+
 纵向结构能够很好地吸引读者的注意力，通过纵向联系，可以建立一种疑问 / 问答式的对话，从而让读者带着极大兴趣去了解。
 其结构是：该表述的下一层次横向地对该问题做出表达，但该回答仍然是所不知道的信息，因此又需要在下一个层次对新疑问作出回答。值得注意的一点是：想要吸引读者的注意，必须在作者准备回答问题之前，避免引起读者的疑问 (？？？)；也必须在引起读者疑问之前，避免先回答问题。（等同于在引起读者疑问之后再去回答问题）
 
 总结：你所做的每一个表述应当引起读者的疑问，而你也必须在这一表述以下的结构层次上横向地对读者的一问题予以回答
 
 #### 2.2 横向结构
+
 回到上一层次的疑问的同时还需要保证其表述的逻辑关系（具有归纳或演绎关系）。
+
 #### 2.2.1 演绎性思想
+
 由几项承前启后的论述组成：
+
 1. 第一个思想是对当今世界某个现象的表述。 eg: 所有人都会死
 2. 第二个思想是对该句子的主语或者谓语进行表述。 eg: 苏格拉底是一个人
 3. 以上两个表述同时存在时所具有的隐含意义。 eg: 因此苏格拉底会死
+
 #### 2.2.2 归纳性思想
+
 用同一个复数名词表示它们相互联系。
 eg：法国坦克已抵达波兰边境、德国坦克已抵达波兰边境、俄国坦克已抵达波兰边境
 
 #### 2.3 序言结构
+
 以讲故事模式回答问题的起源和发展。即开头说明'情境'的时间地点，该情景下应当发生的某项事情--'冲突'，使读者提出你的文章中将要'回答'和'疑问'
 比如： xxx 时间 + 地点 + 发生了什么情况 + 出现了什么问题 + 如何结构这个问题
 
 #### 2.4 总结 （个人体会）
+
 如何组织自己的思想有三种方式：纵向结构、横向结构、序言结构。个人觉得其实只有两个方式 1. 纵向结构 + 横向结构 2. 序言结构。
 
 其中纵向结构应该和横向结构组合在一起使用，即纵向地回答上一层次的疑问，横向地将回答以某种逻辑(演绎、归纳)表述出来。序言结构则是通过讲故事的模式来介绍，一般可用在文章的序言和介绍背景。
 
 ### 第三章 如何构建金字塔结构
+
 本章主要介绍用自上而下或自下而上的方法去构建文章的金字塔结构。自上而下通常比自下而上容易，因此应首先尝试自上而下的方法
+
 #### 自上而下法
+
 利用序言部分结构，将头脑中的正确观点逐个理出来。具体方法如下：
+
 1. 画出主题方框 --- 即在方框中写出将要讨论的主题
 2. 确定主要问题 --- 确定文章的读者（文章针对的对象），希望回答读者关于该主题的什么问题
 3. 写出对该问题的回答
 4. 说明'情境' --- 将讨论的主题同 '情境' 结合起来，作出相关（不会引起争议）表述。
 5. 指出'冲突' --- 思考'情境'中发生了什么能够引起读者疑问的冲突。
 6. 检查主要问题和回答 --- 对'冲突'的表述应当能够直接导致主要问题的提出。
+
 #### 自下而上法
+
 有时候思考还不够成熟，无法构建金字塔结构的顶部，这时我们可以自下而上得组织你的思考
+
 1. 列出你想表达的所有思想要点
 2. 找出各要点之间的逻辑关系
 3. 得出结论
-按这种思路整理之后，再按之前的方式列出各个要点
-1.主题 2.疑问 3.回答 4.情境 5.冲突 6.新的疑问 7.关键句
+   按这种思路整理之后，再按之前的方式列出各个要点 1.主题 2.疑问 3.回答 4.情境 5.冲突 6.新的疑问 7.关键句
+
 #### 注意事项
-1.一定先尝试自上而下法
-2.将'情境'作为构思序言部分的起点
-3.不要省略对序言部分的思考
-4.将历史背景放在序言部分
-5.序言部分仅涉及读者不会对其真实性提出疑问的内容
-6.如果可以选择，在关键句层次上更宜使用归纳法而非演绎法
+
+1.一定先尝试自上而下法 2.将'情境'作为构思序言部分的起点 3.不要省略对序言部分的思考 4.将历史背景放在序言部分 5.序言部分仅涉及读者不会对其真实性提出疑问的内容 6.如果可以选择，在关键句层次上更宜使用归纳法而非演绎法
+
 #### 总结 （个人体会）
+
 本篇介绍如何构建金字塔结构，其实我理解我们只要将想法按这 7 个要点（1.主题 2.疑问 3.回答 4.情境 5.冲突 6.新的疑问 7.关键句）罗列出来就能很快地构建整体的金字塔结构。其中我认为比较难的点在于 4-7，需要我们在构思时结合当前所处的环境分析其所存在矛盾点，然后描述该矛盾的是否可以解决，给出如何解决的方案或者想法，最后总结原因为什么能够解决。其中如何总结原因最后用第二章所提到的归纳法，将各个要点归纳出核心的思想并表述出来。
 
 ### 第四章 序言部分的具体写法
+
 文章的序言部分是通过概述读者已知的信息，与文章将要回答的问题之间建立某种联系，然后作者便可以将全部经理放在提供这个问题的答案上。（简而言之就是序言交代文章的问题，正文就详细描述该问题的答案）
 
 其中文章的序言部分必须是讲故事的形式，其结构是先引入读者熟悉的"情境"，说明发生的"冲突"，并尤其引发读者的"疑问"，然后对该"疑问"作出"回答"
 
 #### 4.1 讲故事形式
+
 通过向读者讲述一个关于某主题的"故事"，以引起读者对改主题的兴趣。每个好的故事都有开头、中间、结尾，也就相当于引入某种"情境"，说明发生的"冲突"并提出解决方案。这里所谓的解决方案就是文章需要表达出的主要思想。
 讲故事的方式能够使你在向读者表述一些他们可能不同一的思想之前，先向他们传递一些他们肯定会认可的信息。向读者传递一些他们肯定会认可的信息，更能让读者接受全篇的思想。
 
 #### 4.2 何时开始引入"情境"
+
 开始引入"情境"时，应先作出与文章主题有关、且读者肯定会同意的表述，应当是读者已经认可或者将会认可的表述。开始引入"情境"的时机，就是你能够作出关于文章主体的独立的、无争议的表述的时候。
 所有引出"情境"的句子都具有一个重要的特征，即都能够将你"锁定"在特定的时间和空间，从而为叙述故事做好准备。
 
 #### 4.3 什么是"冲突"
+
 文章序言部分中的"冲突"虽然经常指的是某种不利的变化，但并不是具有"不利的变化"的含义。这里的"冲突"类似于讲故事时推动情节发展的因素，能够促使读者提出"疑问"。将关于文章主题的公认事实作为叙述"故事"的起点，"冲突"就是推动"故事"情节发展因素，并且必须引发读者的"疑问"
 
 #### 4.4 顺序
+
 序言部分必须采取 情境--冲突--解放方案的结构形式。但也可以交换顺序，创造文章的不同风格。
+
 1. 标准式：情境--冲突--解放方案
 2. 开门见山式 解放方案--情境--冲突
 3. 突出忧虑式 冲突--情境--解放方案
 4. 突出信心式 疑问--情境--冲突
 
 #### 4.5 关键句
+
 关键句不仅要针对文章主体思想句引起的新的疑问进行回答，还要表明文章的组织结构。如果文章篇幅较长，你就应该列出关键句的要点，然后为每个要点起一个小标题，并开始写作。
 
 #### 4.6 序言部分的长度
+
 文章的序言部分具有以下形式：
 S = 人们相信使用 X 工具将获得 Y
 C = 确实在使用 X，但是只有其他人获得 Y
@@ -144,35 +175,39 @@ Q = 为什么其他人获得 Y
 A = 使用 A + B + X
 
 写好序言需要注意的原则：
+
 1. 序言部分的目的是 "提示" 读者而不是 "告诉" 读者某些信息
 2. 序言部分必须具备讲故事的三个要素，即"情境"、"冲突"、"解放方案"
 3. 序言部分的长度取决于读者和主题的需要
 
 #### 4.7 常见模式
+
 写文章通常要回答都是以下四种问题之一：
+
 1. 我们应该做什么？
 2. 我们应该如何做
 3. 我们是否应该这样做
 4. 为什么发生这种情况
 
 (商业性)文章中常见的四种模式：
+
 1. 发号施令式（针对"我们应该做什么?"或"我们应该如何做"之类问句）
-目的是要求或告诉某人做某事
-S = 我们打算做 X | 你做 X | ...
-C = 需要你们做 Y | 必须以 Y 方式进行 | ...
-Q = 我们如何做 Y | 什么是 Y 方式
+   目的是要求或告诉某人做某事
+   S = 我们打算做 X | 你做 X | ...
+   C = 需要你们做 Y | 必须以 Y 方式进行 | ...
+   Q = 我们如何做 Y | 什么是 Y 方式
 2. 寻求支持式
-S = 我们遇到了一个问题
-C = 我们的解决方案是 xxx
-Q = (我应该同意吗)
+   S = 我们遇到了一个问题
+   C = 我们的解决方案是 xxx
+   Q = (我应该同意吗)
 3. 解释方法式
-S = 必须做 X
-C = 还未做好做 X 的准备
-Q = 如何做好准备
+   S = 必须做 X
+   C = 还未做好做 X 的准备
+   Q = 如何做好准备
 4. 比较选择式
-S = 我们希望做 X
-C = 我们有一些不同的做 X 的方案
-Q = 哪一种方案最合理
+   S = 我们希望做 X
+   C = 我们有一些不同的做 X 的方案
+   Q = 哪一种方案最合理
 
 咨询式性文章
 S = 你遇到一个问题 | 你遇到了一个问题
@@ -189,95 +224,117 @@ Q = 你们发现了什么？
 A = 我们发现你们仍然存在生产能力问题，而且情况比之前更严重
 
 #### 4.8 总结
+
 日常生活中如何去交代的一项事情就好比如何去写好文章的序言，都可以用 情境--冲突--解放方案 的形式去表述，不同的场景下考虑以不同顺序的方式表述以达到更好的效果。当我们讲述一件事情的时候，大脑一开始并不会这样去组织思维，其实我们可以将事情的背景、经过、结果将写下来，然后表述时再以这种方式去调整语句。这样表达出来的语句会是一个清晰的结果，久而久之大脑就会习惯用这种方式组织思维。
 
-
-
 ### 第五章 演绎与归纳的区别
+
 金字塔中的思想以三种方式互相关联 --- 向上关联、向下关联和横向关联。位于一组思想的上一个层次的思想是对这一组思想的概括，而这一组思想则是对其上一个层次的思想的解释和支持。同一组中的思想相互之间存在某种逻辑顺序，具体的逻辑顺序取决于该组思想之间的逻辑关系是演绎关系还是归纳关系。
 演绎关系是一种线性的推理方式，最终是为了得出一个由逻辑词"因此"引出的结论。归纳则是将一组事实或者思想归结为同一类，并对其相似性作出表述。在演绎过程中，每个思想均由前一个思想导出，而在归纳过程中则不存在这种关系。
 
 #### 演绎推理的过程
+
 可以将演绎过程看成三个步骤：
+
 1. 对世界上某种已存在的情况作出表述
 2. 对世界上同时存在的某种相关情况作出表述。如果第二个表述是针对第一个表述的主语或谓语作出的，则说明这两个表述相关。
 3. 说明这两种情况同时存在的隐含意义
-eg： 所有人都会死 -> 苏格拉底是一个人 -> 因此苏格拉底会死
+   eg： 所有人都会死 -> 苏格拉底是一个人 -> 因此苏格拉底会死
 
 有时候在两个以上的演绎过程连接起来时，我们可以（如果读者能够理解并同意）略去中间的推荐步骤
 
 #### 演绎推理的使用
+
 由于演绎推理非常繁琐，在关键局层次上尽量避免使用演绎法进行论述，尽量使用归纳法取而代之。
 演绎推理往往是先提出 "为什么" 再得出 "如何做到"，其中的中间过程过于繁琐，所以我们可以将此调换顺序，将提出 "如何做到" 再提出 "为什么"。金字塔的底层仍然可以使用演绎推理，但这样可以直接回答读者的主要问题，而且思路非常清晰。
 
 #### 归纳推理
+
 在进行归纳推理时，大脑首先注意到若干不同事物具有某种共性，然后将其归类于同一个组中，并说明其共性。
 需要具备两种主要技能：
+
 1. 对该组思想作出正确定义 (归纳概括)
 2. 准确识别该组思想中与其他思想不相称的思想 （识别判断）
 
 #### 归纳推理的过程
+
 在进行归纳推理时，最重要是找到一个表示该组所有思想的词，这个词必须是一个复数名词。围绕这个复数名词总结归纳一种核心思想，然后自下而上检查所有支持该思想的分散的思想。
 
 #### 演绎和归纳推理的区别
+
 演绎推理第二个思想必须是对第一个思想的主语或谓语作出的评述，如果不具备该特点，应该用一个相同的复数名词概括两个思想，来检查归纳分组是否恰当。
 
 #### 总结
+
 总而言之，演绎关系的建立要求推理过程中的第二步对第一步作出评述，并导出一个推论。归纳关系则基于句子的结构。我认为金字塔顶层应尽可能先用归纳法总结每个思想，然后再通过演绎推理详细描述每种思想的过程。在表述归纳或者演绎过程中，我们需要总结出主题思想，推理过程中要紧扣这个思想，避免主题思想和推理过程不符造成读者或者听着对其产生歧义。
 
 ### 第一章总结
+
 本篇文章主要介绍"写作的逻辑"，告知我们通过 "自上而下" 或者 "自下而上" 的方法整理写作的思路、通过 情境--冲突--解放方案 的形式来描述序言部分如何书写。并介绍演绎推理和归纳推理的过程将来每个思想联系起来。我认为本章的核心部分就是这三个部分，掌握这三个要点，在今后的写作或者讲述时才能有一个清晰的结构。
 
 ## 第二篇 思考的逻辑
+
 ### 第六章 确定逻辑顺序
+
 同一组的思想都必须具有某种逻辑顺序，这样不仅能保证同组思想确实属于同一组，还可以防止遗漏任何有关思想
 分组思想的逻辑顺序大概包括：
+
 1. 确定前因后果关系 --- 时间顺序
-代表一个过程或系统的一组行为必定按时间顺序，对这组行为的概括必定采取这些行为所达到的效果，即通过某种行动达到某种效果。
+   代表一个过程或系统的一组行为必定按时间顺序，对这组行为的概括必定采取这些行为所达到的效果，即通过某种行动达到某种效果。
 2. 将整体分割车给你部分 --- 结构顺序
-跟组织结构图一样，将整体分割成部分。
+   跟组织结构图一样，将整体分割成部分。
 3. 讲类似事物归位一组 --- 重要性顺序
-每个思想具有某种特性，只是所具有的共性程度不相同，按其程度从大至小的顺序将其组织起来。
+   每个思想具有某种特性，只是所具有的共性程度不相同，按其程度从大至小的顺序将其组织起来。
 
 以上的是那种逻辑顺序即可以单独使用，也可以结合使用。
 
 #### 时间顺序
+
 按照行动的顺序依次表述达到某一效果所必须采取的行动。该组中的思想可以是实际的行动步骤或行动性的思想，也可以是大脑中隐含的思维过程得出的一些结论。
 
 #### 结构顺序
+
 使用示意图、地图、图画或照片想象某事物的顺序
 创建逻辑结构：将整体划分成不同部分，保证划分后的各部分满足：各部分之间相互独立 、所有部分完全穷尽。
 描述逻辑结构：逻辑结构建立后可以按照自上而下、自左而右的顺序依次描述各个部分。
 
 #### 重要性顺序
+
 重要性顺序，也称程度顺序，是对一组因为具有某种共同点而被聚集在一起的事物所采用的顺序。
 创建适当的分组：按每组中的共同特征划分，每组中的各个问题按特性的程度高度排序，最具有该特征的问题排在第一位
 
 #### 总结
+
 当我们总结一个归纳性的思想，一定先快速浏览一遍该组的所有思想，检查是否按时间顺序、结构顺序、重要性顺序的逻辑顺序。其中每种逻辑都有各自的特点，如果每个思想是按某种行为顺序共同得到某一效果的话就可以将思想按 "时间顺序逻辑" 以时间顺序描述；如果每个思想像组织架构一样就可以将思想按结构顺序划分再通过自上而下、自左而右的顺序描述；如果每个思想具有相同的共性就可以将思想按共性划分再通过程序顺序描述；
 
 ### 第七章 概括分组思想
+
 很多作者只是简单将一些思想组合在一起，并没有完成思考。很多人讲一些支具有一般性关系，而不具有明确关系的思想罗列在一起，由于这些思想实际并非真正属于同一组思想，很难找到这组思想的概括性思想，所以有时就会有一些 "缺乏思想" 的句子对应付。例如：
-* 该公司应当确定三个目标
-* 该公司存在两个问题
-* 我们建议进行五项改革
-这些句子都称为 "缺乏思想" 的句子，因为这些句子实际并没有概括其下一个层次的思想精华，所以对读者而言会显得枯燥乏味。
+
+-   该公司应当确定三个目标
+-   该公司存在两个问题
+-   我们建议进行五项改革
+    这些句子都称为 "缺乏思想" 的句子，因为这些句子实际并没有概括其下一个层次的思想精华，所以对读者而言会显得枯燥乏味。
 
 #### 7.1 避免使用 "缺乏思想" 的句子
+
 "缺乏思想" 的句子对读者而言是索然无味的，并且这种句子会掩盖不完整的事实，使你丧失一个进行富有逻辑性和创造性的思考的机会。如果你已经得出了一个概括性的思想，你就可以在该思想的基础上运用一下两种方式延续你的思路：
-* 对齐做进一步评论 （演绎法）
-* 找出预知类似的思想 （归纳法）
+
+-   对齐做进一步评论 （演绎法）
+-   找出预知类似的思想 （归纳法）
 
 当我们有时候想表达一些思想的时候，可以先总结出这些思想的概括性思想。如何正确的概括呢？首先我们需要检查这组思想的分组基础，保证其相互独立/完全穷尽，然后还需确定最后的概括性思想的语句类型（行动性语句、描述性语句）。
-* 行动性语句告诉读者做某事。概括行动性思想时，应说明实施行动后的结果
-* 描述性语句告诉读者关于某事的情况。概括描述性思想时，应说明这些思想具有的共同点的含义。
-d
+
+-   行动性语句告诉读者做某事。概括行动性思想时，应说明实施行动后的结果
+-   描述性语句告诉读者关于某事的情况。概括描述性思想时，应说明这些思想具有的共同点的含义。
+    d
 
 **7.1.1 说明行动产生的结果**  
 对一系列行动的概括也必定是实施这些行动所产生的结果，任何一组相互独立和完全穷尽的行动思想加上其导致的结果，就能形成一个独特的封闭体系。当我们罗列了一些实现某一目标应当采取的行动时，必须先指出这些行动应当达到的结果。如何理顺这种行动与结果的相互依赖性：
-* 在将各行动性思想联系起来之前，先用尽量明确的语言表述各行行动性思想
-* 找出一些明确的因果关系组合，尽量使每一组思想中的步骤保持在五个以下
-* 直接从行动性语句中概括除行动结果
+
+-   在将各行动性思想联系起来之前，先用尽量明确的语言表述各行行动性思想
+-   找出一些明确的因果关系组合，尽量使每一组思想中的步骤保持在五个以下
+-   直接从行动性语句中概括除行动结果
 
 **7.1.1.1 使用明确的语言**  
 在判断某组思想是否完全穷尽时，我们必须能够非常明确地指出其要达到的结果，明确到像手中拿着成品一样。举个例子，你不鞥呢含糊地说：我做这三件事是为了提高利润。因为利润提高 10 个百分点和 2 个百分点都是提高。而我们如果这样说：我做这三件事是为了在明年 1 月 15 日以前将利润提高 10 个百分点。这种明确的措辞有助于判断罗列的措施是否确实能够造成该结果。在处理行动性思想时，理顺自己的思路的最简单的方法，就是想象自己确实采取了这些行动，然后完成这些行动将导致的明确结果，修改个行动步骤的语言，使之更加明确。
@@ -287,37 +344,40 @@ d
 
 区分行动性思想的层次比较容易：如果你希望读者在采取下一项行动之前先采取某一项行动，那么这两项行动就属于同一层次。如果你希望读者采取某一项行动以便产生下一项行动，那么前一项行动就属于后一项行动的下一个层次。
 
-
 **7.1.1.3 直接概括**  
 将某一行动过程的所有步骤都理顺后，下一步就是概括其结果。对此：
-* 该组思想必须相互独立和完全穷尽
-* 概括性思想必须说明完成各行动步骤后导致的直接结果，且措辞必须明确具体
+
+-   该组思想必须相互独立和完全穷尽
+-   概括性思想必须说明完成各行动步骤后导致的直接结果，且措辞必须明确具体
 
 **7.1.2 找出结论中的共性**  
 确定结论，第一步现将各个组织问题分成一类，第二步找出这些思想之间的共同点，证明这些思想确实属于同一类。第三部说明这些思想之间的共同点所具有更普遍的意义。对此我们必须做到以下几点
-* 找出讲这些思想联系在一起的结构上的共性
-* 寻找这些思想间更密切的联系
-* 完成归纳跃进，概括出主题思想
+
+-   找出讲这些思想联系在一起的结构上的共性
+-   寻找这些思想间更密切的联系
+-   完成归纳跃进，概括出主题思想
 
 **7.1.2.1 找出结构上的共性**  
 如果某些思想具有某种共同的特点，这些思想就可以联系在一起。表达思想的语句必定具有一个由主语和谓语组成的结构。如果这些语句符合一下要求，就说这一组思想具有某种共性：
-* 针对同一类主语
-* 针对同一类谓语
-* 具有同一类隐含的思想
+
+-   针对同一类主语
+-   针对同一类谓语
+-   具有同一类隐含的思想
 
 **7.1.2.2 寻找更密切的联系**  
 下面有一个信息系统产生的信息提出的五点意见，其共性体现在每个句子的谓语上：
+
 1. 有关核算、估算和调查的数字应当更新。
 2. 现在需要有关各类员工的经常性人事变动的数字。
 3. 应当收集招标中的竞争信息，以便监控不同市场的竞争激烈程度。
 4. 现有的有关市场上工资水平的信息不够充分。
 5. 需要有关部门和项目资金锁定的数字。
-简化后如下:有关信息
-1. 应当更新
-2. 现在需要(有关信息)
-3. 应当收集(有关信息)
-4. 不够充分
-5. 需要(有关信息)
+   简化后如下:有关信息
+6. 应当更新
+7. 现在需要(有关信息)
+8. 应当收集(有关信息)
+9. 不够充分
+10. 需要(有关信息)
 
 对以上思想可以分为两组  
 ---认为有关信息不存在（2、3、5）  
@@ -329,6 +389,7 @@ d
 **7.1.2.3 完成归纳跃进**  
 （还是通过文章的例子来理解）某家公司的销售方案：  
 我们的销售方案可以通过改善以下方面向客户展现出全新的形象:
+
 1. 进行更有效的机会分析，以保证我们充分利用资源。
 2. 协调各种方案,包括建立一个关于方案编制的单一质量工序、建立方案内容和形式的标准，以及建立一个连续提高质量的系统。
 3. 尽量再利用方案信息。
@@ -336,54 +397,60 @@ d
 5. 使方案的准备更具成本效率。
 6. 进一步减少反应时间
 7. 将制定方案的过程作为关注客户需要的销售工具(而不是传递技术信息的机制)。
-如果按照我们的标准检查过程(找出共同点、得出推论),我们可以将以上句子合并为三个句子，并按各个句子的行为发生的顺序排列。
+   如果按照我们的标准检查过程(找出共同点、得出推论),我们可以将以上句子合并为三个句子，并按各个句子的行为发生的顺序排列。
 
 我们的方案不是有效的销售工具:
+
 1. 我们没有提供有说服力的信息。(1、4、7)
 2. 我们没有使其看上去很优秀。(2)
 3. 我们的制定过程过长。(3、5、6)
 
-
 #### 7.2 总结
+
 不能简单地把一系列思想堆放在一起,并假定读者能够看出其中的意义。每一组思想都隐含着一个总结性的思想，这个思想能够反映出该组思想之间的关系的本质，你应当首先使自己明确地了解各组思想之间的关系，然后再向读者指明这种关系:
 
 这些思想都具有某种共性,而且是以这种方式相互关联的仅有的一些思想。  
-  -- 在这种情况下,该组的概括性思想应当是该组思想的共性所隐含的意义。
+ -- 在这种情况下,该组的概括性思想应当是该组思想的共性所隐含的意义。
 
 这些思想都是为实现某一结果而必须一同采取的行动。  
-  -- 在这种情况下，该组的概括性思想应当表明采取以上行动后.导致的直接结果。
+ -- 在这种情况下，该组的概括性思想应当表明采取以上行动后.导致的直接结果。
 
 如果你按照这种方法迫使自己对每一-组思想进行思考、检查，那么你向读者表达的思想将会非常清楚、明确,而且你还很有可能发现一些在此之前没有想到的有意义的思想。
 
 #### 7.3 个人体会
-日常生活中我们往往会无意地表述一些没有思想的语句。比如：我有一个xx的想法、我觉得xx是不对的、我发现了一个问题.... 其实日常生活中人们往往都会表述这样的句子，但如果是汇报总结的话，应尽量减少这样的句子。我们更应该在此之前将这些句子后续的话总结归纳出一个核心的思想，提前表述出来。比如我们要说 "我发现了三个问题"，我们可以提前构思这三个问题是属于哪类的问题？其中的共性是什么？这之间有什么联系，然后用更更概括性的句子来表述出来。
+
+日常生活中我们往往会无意地表述一些没有思想的语句。比如：我有一个 xx 的想法、我觉得 xx 是不对的、我发现了一个问题.... 其实日常生活中人们往往都会表述这样的句子，但如果是汇报总结的话，应尽量减少这样的句子。我们更应该在此之前将这些句子后续的话总结归纳出一个核心的思想，提前表述出来。比如我们要说 "我发现了三个问题"，我们可以提前构思这三个问题是属于哪类的问题？其中的共性是什么？这之间有什么联系，然后用更更概括性的句子来表述出来。
 
 ### 第八章 界定问题
+
 界定问题的方法 -- 序列方法： 非预期结果（R1：世界上存在某一特定情境导致的某一特定结果）与预期结果（R2：想得到的其他结果）存在差异，找到解决方案（R1 -> R2）。
 我们可以按下面的逻辑顺序来找到答案：
+
 1. 有没有/可不可能有问题（或机会）？
 2. 它在哪里？
 3. 为什么存在？
 4. 我们能做什么？
 5. 我们应该做什么？
-问题 1 和 2 用来界定问题，问题 3 来寻找原因，问题 4 和 5 解决问题的最佳办法。
+   问题 1 和 2 用来界定问题，问题 3 来寻找原因，问题 4 和 5 解决问题的最佳办法。
 
 #### 界定问题的框架
+
 1. 发生了什么事情？（情境 [切入点/序幕 + 困扰事件]）
 2. 我们不喜欢它什么？（R1）
 3. 我们想要的是什么？（R2）
-根据上述框架找到问题之后就是将其转换成序言：情境（切入点）、冲突（困扰事件、R1、R2）、疑问。
+   根据上述框架找到问题之后就是将其转换成序言：情境（切入点）、冲突（困扰事件、R1、R2）、疑问。
 
 #### 展开问题
+
 **切入点/序幕**  
 序幕是由结构或者流程组成的（结构图、配置、地点、固定流程...），在序幕阶段尽量作简单的设想和简答的描述，等到写序言时再加以展开。
-
 
 **困扰事件**  
 某些事件的发生困扰了结构或流程的正常运行。困扰事件是指现在发生、即将发生的未来发生的事件，它对序幕中所描绘的相对稳定的情境构成威胁，并因此引发了非期望结果。
 
 **非预期结果**  
 指读者需要设法解决或有可能面临的问题，或者有可能抓住的机会。通常是由于困扰事件引起的。困扰事件可能是尚未发现或出现的机会，但更有可能:
+
 1. 对公司流程或结构产生负面影响
 2. 扰乱某一特点领域的工作
 3. 引入对业务、产品、流程的重新考虑
@@ -394,26 +461,30 @@ d
 
 **寻找疑问**  
 通常有七种不同情形：
-1. 不知道如何从R1到R2
-2. 知道如何从R1到R2,但不敢肯定是否正确
-3. 知道从R1到R2的正确方案,但不知道如何实施
-4. 知道从R1到R2的解决方案,并且已经实施,但由于某种原因行不通
+
+1. 不知道如何从 R1 到 R2
+2. 知道如何从 R1 到 R2,但不敢肯定是否正确
+3. 知道从 R1 到 R2 的正确方案,但不知道如何实施
+4. 知道从 R1 到 R2 的解决方案,并且已经实施,但由于某种原因行不通
 5. 确定了好几个解决方案,但不知道选哪一个
-6. 知道R1,但不能具体地描述R2,所以无法找到解决方案
-7. 知道R2,但不清楚自己是否处在R1(这是典型的基准研究)
+6. 知道 R1,但不能具体地描述 R2,所以无法找到解决方案
+7. 知道 R2,但不清楚自己是否处在 R1(这是典型的基准研究)
 
 **序言写作**  
 同样还是套用第四章提到的序言写作的公式，找到情境（一般为切入点、序幕==描述当前所处的场景），存在的冲突（预期结果和非预期结果存在的差异，导致的问题），找出疑问点（根据切实场景描述，大概是上述提到的七种）。
 
 #### 总结/个人体会
+
 本章的内容介绍了如何界定问题，确定问题后以序言的写法结构来描述。相比与第四章序言写法，我理解本章的精髓在于教我们如何确定情境、冲突、疑问，从而引出最终的方案。以本文提到的方法能够更加结构性地列出序言的每个要点，大大提高我们确定方案的工作效率。
 
-
 ### 第九章 结构性分析问题
+
 分析问题的标准程序：收集问题 -> 描述发现 -> 得出结论 -> 提出方案。建立诊断框架和逻辑树知道分析和引导思维，能够提高解决问题的效率并简化金字塔的工作
 
 #### 从资料入手
+
 收集数据之前对问题进行结构性分析：
+
 1. 提出各种假设
 2. 涉及一项或几项重要的实验，根据产生的各种结果排除一个或多个假设
 3. 通过实验得出明确的结论
@@ -427,38 +498,44 @@ d
 
 **寻找因果关系**
 
-* 画出结构示意图后，对每个要素进行细分，找出它们主要受哪些因素影响，确定每个影响因素的构成。
-* 将结构划分树状图，将每个要素都表明为一项独立的管理任务，找出每项任务的问题，确定采取何种行动方案。
-* 用树状图寻找进行的活动，设想可能造成该种结果的原因，并将其按适当的层次分别联系起来。
+-   画出结构示意图后，对每个要素进行细分，找出它们主要受哪些因素影响，确定每个影响因素的构成。
+-   将结构划分树状图，将每个要素都表明为一项独立的管理任务，找出每项任务的问题，确定采取何种行动方案。
+-   用树状图寻找进行的活动，设想可能造成该种结果的原因，并将其按适当的层次分别联系起来。
 
 **将可能的原因分类**
 划分树状图，把所有可能的原因按相似性进行（相互独立、完全穷尽）分类，并按此进一步找到可能的原因。
 或者每次只是进行简单的双重选择，一致持续到更准确地了解可能原因时为止。
 
 #### 运用诊断框架
+
 根据诊断框架准备必须的资料，根据每个结构的要素点分析哪些地方存在不足，再使用逻辑树得出解决问题的不同方案。具体有一下步骤：
+
 1. 有没有问题？
 2. 问题在哪里？
 3. 为什么存在
 4. 我们能做什么？
 5. 我们应该做什么？
-用逻辑树的方法对每个要点展开分析，找出各组思想的缺陷。判断各个问题是不是 「是非问题」（回答是与否的问题），将其调整为是否问题。
-比如说我们现在的问题是：存货成本高，可能分为 1. 2. xxx。对此我们调整为是非问题 是否/如何降低存货成本。这样是解决问题的最实质需要探讨的问题。是非问题一般来自导致 R1 的情境。
+   用逻辑树的方法对每个要点展开分析，找出各组思想的缺陷。判断各个问题是不是 「是非问题」（回答是与否的问题），将其调整为是否问题。
+   比如说我们现在的问题是：存货成本高，可能分为 1. 2. xxx。对此我们调整为是非问题 是否/如何降低存货成本。这样是解决问题的最实质需要探讨的问题。是非问题一般来自导致 R1 的情境。
 
 ## 第四篇 演示的逻辑
+
 采用怎样的形式来演示/呈现金字塔的内容，大概有如下原则：
+
 1. 如果信息短，只对一个或者多个人，可以采取书面备忘录或者报告的形式，并直接发给收件人，让其自行阅读。
 2. 如果信息短针对多人，可以采用 要点备忘录、视觉资料文件的形式，一起讨论。
 3. 信息长且针对多人，可能会采用幻灯片的形式，投影仪或者电脑放映图像。
 
 ### 第十章 在页面上反映金字塔
+
 反映金字塔层次的方法：
+
 1. 多级标题法
 2. 下划线法
 3. 小叔编号法
 4. 行首缩进法
 5. 项目符号法
-文章较短，可以将主要观点加上下划线，这样更能让读者能够直观看到。
+   文章较短，可以将主要观点加上下划线，这样更能让读者能够直观看到。
 
 **多级标题法**
 
@@ -481,36 +558,45 @@ d
 
 使用不同形式的 1.2.3 / a.b.c 序号来划分小结
 
-
 #### 组与组之间的过渡
+
 两个章节内容（做什么）不应该链接在一起，而是主要观点连接在一起。
 
 #### 讲故事
+
 讲述情境 -- 冲突 -- 疑问，自然地引出关键论点作为故事的答案。
 
 #### 承上启下
+
 前一部分挑选一个词、一句短语或总结其中心思想，用在下一部分的起始句中。
 
 #### 对章节进行总结
+
 总结本章内容，凝练地复述前文的主要论点和基调。
 
 #### 得出完整结论
+
 使用具有说服力的语言，向读者总结本章的内容
 
 #### 说明下一步措施
+
 如果本文是建议读者采取一系列行动步骤，就非常有必要说明下一步的措施。
 
 #### 结论
+
 本章的内容很简单，就是教我们如何书写一篇文章，其中涉及到的方法也比较常见。其中比较简短的文章可以使用下划线法（确定每个论点将其划线）、多级标题法（确定每段的标题，加粗独立一句）、项目符号法（确定每个小点）。篇幅比较多的文章就要使用编号法了。对于每一组之间我们需要做好过渡，这也是我们平时写作比较欠缺的，有时候往往写作时很少想到每一段之间的链接，过渡很不自然。最好是能够做到承上启下，选取前部分的词作为下一段的开始。章节的最后对本章做一个简短的总结。
 
 ### 第十一章 在屏幕上反映金字塔
+
 演示文稿能够极大的吸引听众。写好演示文稿需要掌握的基本事项：
+
 1. 文本幻灯片应只包含最重要哦对、经过适当分组和总结的思想观点，叙述时应尽量简洁。
 2. 演示应使用各种图表作配合。理想的比例是图表占 90%，文本占 10%。
 3. 演示反映经过深思熟虑后的故事梗概和剧本。
-好的文本幻灯片总是尽可能直接简单地传递信息，只强调金字塔中的主要论点，不把文字浪费在口头表达的转折性或介绍性语言上。
+   好的文本幻灯片总是尽可能直接简单地传递信息，只强调金字塔中的主要论点，不把文字浪费在口头表达的转折性或介绍性语言上。
 
 一张幻灯片的内容应牢记一下指导性原则：
+
 1. 每次只演示和说明一个论点
 2. 论点应使用陈述性语言，而不是标题性语言
 3. 文本尽量简短 (每张不超过 6 行或约 30 个单词)
@@ -520,12 +606,15 @@ d
 7. 使用 "搭积木" 的方法提高趣味性 (比如先显示一个圆圈，然后分为几个，最后有分多个方框..)
 
 #### 制作图表幻灯片
+
 图表幻灯片传递的信息应该尽量简单易懂，诀窍是确定用图表回答的问题，把答案作为图表的标题，然后选择最适合表现论点的图表形式。
 
 图表的标题一定要直接传达信息，要么以完整的句子，要么以一个含有动词的短语，
 
 #### 故事梗概
+
 通常包含：
+
 1. 序言尽量详细。
 2. 采用写故事梗概的形式：幻灯片的顺序从上往下依次为序言论点、关键句论点和关键句下一层论点。
 3. 决定采用的视觉方法。比如采用什么图表来表现数据的变化。
@@ -534,14 +623,17 @@ d
 6. 排练。
 
 #### 个人体会
+
 本章旨在告诉我们如何将金字塔的内容以幻灯片的形式呈现，其中最为理想的是图表幻灯片，它不仅能有效地传递信息，还能充分吸引观众的兴趣。一个好的图表幻灯片，其图表形式一定要恰当，表现组织关系用组织结构图，数据变化用柱状图或者条形图等等。图表的标题也要恰为合适，要能够充分表达一个完整的信息。其次就是幻灯片的内容，金字塔的每个论点可作为每一章幻灯片的内容，幻灯片的上部写一句话或一个短语来传达幻灯片将阐述的观点，后面详细介绍其关键论点的内容。
 
 ### 第十二章 在字里行间反映金字塔
+
 构建金字塔结构，检查每个分组的思想论点，然后将其付诸于文字，但这个工作并不简单。一篇文章可能使用大量的专业术语，导致段落晦涩难懂，内容乏味，或许一些能力强的人能够了解，但这并不使用每一个人。一篇好的文章不仅能清楚得表达你的思想观点，还能让读者觉得轻松易懂。我们可以通过图像来将大量事实综合成简单抽象的概念。
 
 臆造图像：图片能够帮助理解和记忆，所以我们可以对文章的内容用图片进行展示说明。  
 把图像赋值成文字：将图像转换成清楚的句子。  
-对一篇文字进行改写可以先将其描述除图像，然后根据图片结构改写成完整的句子。  
+对一篇文字进行改写可以先将其描述除图像，然后根据图片结构改写成完整的句子。
 
 #### 个人体会
+
 用文字来描述金字塔的结构，我们可以将金字塔内容以图片、骨架图的形式来进行构建。然后以某种特定的顺序通过文字形式来描述图片内容。这样能够让读者比较清晰的记忆，当我们想要修改一段文字的时候往往可以这么做。
