--- a/_posts/2022-02-23-前端复习之路-JS篇.md
+++ b/_posts/2022-02-23-前端复习之路-JS篇.md
@@ -1,14 +1,17 @@
 ---
-layout:     post
-title:      JS
-date:       2022-02-23
-author:     shaokang
+layout: post
+title: JS
+date: 2022-02-23
+author: shaokang
 catalog: true
 tags:
     - 复习
 ---
+
 ## 继承
+
 ### 1. 原型链继承
+
 ```
 function Person(name) {
     this.name = name;
@@ -26,9 +29,11 @@ Student.prototype = new Person();
 var student = new Student();
 student.getName();
 ```
+
 缺点：父类构造函数中的引用类型会被所有子类实例共享。
 
 ### 2. 构造函数继承
+
 ```
 function Person(name) {
     this.name = name;
@@ -46,9 +51,11 @@ function Student(name, age) {
 var student = new Student();
 student.age;
 ```
+
 缺点：只能继承父类的实例属性和方法，不能继承原型属性和方法；必须在父类构造函数中定义方法，无法实现函数复用，构造函数中的方法会在子类创建时被重新创建（副本），影响性能。
 
 ### 3. 组合继承
+
 ```
 function Person(name) {
     this.name = name;
@@ -75,9 +82,11 @@ var student = new Student();
 student.getAge();
 student.constructor // Student
 ```
+
 优点：父类构造函数始终会被调用两次，一次在是创建子类原型时调用，另一次是在子类构造函数中调用；子类创建实例时，原型中会存在两份相同的属性和方法
 
 ### 4. 寄生组合继承
+
 ```
 function Person(name) {
     this.name = name;
@@ -108,6 +117,7 @@ function object(o) {
 ```
 
 重点在 inherit。相当于
+
 ```
 function Person(name) {
     this.name = name;
@@ -126,25 +136,33 @@ Student.prototype = Object.create(Person.prototype);
 Student.prototype.constructor = Student;
 
 ```
+
 之所以用 Object.create，是为了获取一份父类原型的拷贝，不影响父类原型的构造函数。
 
-### 4. ES6继承
+### 4. ES6 继承
+
 extends 实现继承
 
 ## 原型
-所有引用类型（函数，数组，对象）都拥有__proto__属性（隐式原型)
-所有函数除了有_proto_属性之外还拥有prototype属性（显式原型）
-原型对象：每创建一个函数，该函数会自动带有一个prototype属性，该属性是一个指针，指向了一个对象，我们称之为原型对象。
+
+所有引用类型（函数，数组，对象）都拥有**proto**属性（隐式原型)
+所有函数除了有*proto*属性之外还拥有 prototype 属性（显式原型）
+原型对象：每创建一个函数，该函数会自动带有一个 prototype 属性，该属性是一个指针，指向了一个对象，我们称之为原型对象。
 
 ## 原型链
-原型对象的 constructor 指向构造函数，实例对象的 __proto__ 指向原型对象。实例对象的属性会随着原型对象一直往上找，直到最顶层。
+
+原型对象的 constructor 指向构造函数，实例对象的 **proto** 指向原型对象。实例对象的属性会随着原型对象一直往上找，直到最顶层。
 
 ## 作用域
+
 定义变量的有效范围。作用域包含全局作用域、函数作用域、块级作用域。
+
 ## 作用域链
+
 当前作用域不存在变量就去父级作用域查找，依次向上寻找，直到访问 window 结束。
 
 ## 闭包
+
 闭包是指有权访问另一个函数作用域中变量的函数，创建闭包的最常见的方式就是在一个函数内创建另一个函数，创建的函数可以访问到当前函数的局部变量。
 
 闭包有两个常用的用途；  
@@ -152,52 +170,56 @@ extends 实现继承
 ● 闭包的另一个用途是使已经运行结束的函数上下文中的变量对象继续留在内存中，因为闭包函数保留了这个变量对象的引用，所以这个变量对象不会被回收。
 
 ## 执行上下文
+
 创建执行上下文有两个阶段：创建阶段和执行阶段  
 1）创建阶段  
-（1）this绑定  
-● 在全局执行上下文中，this指向全局对象（window对象）  
-● 在函数执行上下文中，this指向取决于函数如何调用。如果它被一个引用对象调用，那么 this 会被设置成那个对象，否则 this 的值被设置为全局对象或者 undefined
+（1）this 绑定  
+● 在全局执行上下文中，this 指向全局对象（window 对象）  
+● 在函数执行上下文中，this 指向取决于函数如何调用。如果它被一个引用对象调用，那么 this 会被设置成那个对象，否则 this 的值被设置为全局对象或者 undefined
 
 （2）创建词法环境组件  
 ● 词法环境是一种有标识符——变量映射的数据结构，标识符是指变量/函数名，变量是对实际对象或原始数据的引用。  
-● 词法环境的内部有两个组件：加粗样式：环境记录器:用来储存变量个函数声明的实际位置外部环境的引用：可以访问父级作用域  
+● 词法环境的内部有两个组件：加粗样式：环境记录器:用来储存变量个函数声明的实际位置外部环境的引用：可以访问父级作用域
 
 （3）创建变量环境组件  
-● 变量环境也是一个词法环境，其环境记录器持有变量声明语句在执行上下文中创建的绑定关系。  
+● 变量环境也是一个词法环境，其环境记录器持有变量声明语句在执行上下文中创建的绑定关系。
 
 2）执行阶段  
 此阶段会完成对变量的分配，最后执行完代码。
 
 ### 执行上下文类型
+
 （1）全局执行上下文  
-任何不在函数内部的都是全局执行上下文，它首先会创建一个全局的window对象，并且设置this的值等于这个全局对象，一个程序中只有一个全局执行上下文。
+任何不在函数内部的都是全局执行上下文，它首先会创建一个全局的 window 对象，并且设置 this 的值等于这个全局对象，一个程序中只有一个全局执行上下文。
 
 （2）函数执行上下文  
 当一个函数被调用时，就会为该函数创建一个新的执行上下文，函数的上下文可以有任意多个。
 
-（3）eval函数执行上下文  
-执行在eval函数中的代码会有属于他自己的执行上下文，不过eval函数不常使用，不做介绍
+（3）eval 函数执行上下文  
+执行在 eval 函数中的代码会有属于他自己的执行上下文，不过 eval 函数不常使用，不做介绍
 
 ## 事件循环
+
 ### 浏览器事件循环
-Javascript 单线程任务被分为同步任务和异步任务。异步任务一种是宏任务（MacroTask）也叫Task，一种叫微任务（MicroTask）。每次单个宏任务执行完毕后，检查微任务队列是否为空，如果不为空，会按照先入先出的规则全部执行完微任务后，清空微任务队列， 然后再执行下一个宏任务。
+
+Javascript 单线程任务被分为同步任务和异步任务。异步任务一种是宏任务（MacroTask）也叫 Task，一种叫微任务（MicroTask）。每次单个宏任务执行完毕后，检查微任务队列是否为空，如果不为空，会按照先入先出的规则全部执行完微任务后，清空微任务队列， 然后再执行下一个宏任务。
 
 ### node 事件循环
+
 基于 Libuv 实现。node 调用栈执行完后会执行异步队列（nextTick -> 微任务队列），执行完后进入事件循环。  
 首先判断 timer 队列是否有回调，后续进入 poll 轮训执行队列，如果存在事件任务则执行。如果不存在，会其他队列是否存在事件。比如检查 check 队列，执行 setImmediate 回调。若不存在则一直等待 i/o 事件回调。最后执行 close 的回调队列。  
 https://www.bilibili.com/video/BV13A4y1Q7N5/?spm_id_from=333.788
 
-
 ## 常见知识点
+
 1. Object.create(null) 和 {} 的区别？  
-使用 Object.create(null) 创建的对象，没有任何属性，不会继承原型链上的属性。{} 相反。Object.create(null) 得到一个非常干净且可定制化的对象，能够节省 hasOwnProperty 和 for..in 带来的性能损失。
+   使用 Object.create(null) 创建的对象，没有任何属性，不会继承原型链上的属性。{} 相反。Object.create(null) 得到一个非常干净且可定制化的对象，能够节省 hasOwnProperty 和 for..in 带来的性能损失。
 
 2. for in 和 Objects.keys() 的区别？  
-for in 一般用于遍历对象属性。会遍历自身可枚举的属性以及原型链上可枚举的属性。Object.keys 只会遍历自身可枚举的属性。
+   for in 一般用于遍历对象属性。会遍历自身可枚举的属性以及原型链上可枚举的属性。Object.keys 只会遍历自身可枚举的属性。
 
 3. hasOwnProperty 和 in 的区别？  
-两者都能检查队形中是否存在指定属性。in 能检查实例属性和原型上的属性，hasOwnProperty 只能检查实例上的属性。
+   两者都能检查队形中是否存在指定属性。in 能检查实例属性和原型上的属性，hasOwnProperty 只能检查实例上的属性。
 
 4. 尾递归  
-函数尾部调用自身。好处：只需要保存调用栈，复杂度为 O(1)。 普通递归需要用栈保存每一层的返回点、局部变量，调用过多会造成栈溢出，复杂度为 O(n)。
-
+   函数尾部调用自身。好处：只需要保存调用栈，复杂度为 O(1)。 普通递归需要用栈保存每一层的返回点、局部变量，调用过多会造成栈溢出，复杂度为 O(n)。
