--- a/_posts/2022-02-23-前端复习之路-手写代码篇.md
+++ b/_posts/2022-02-23-前端复习之路-手写代码篇.md
@@ -225,36 +225,36 @@ Function.prototype.myBind = function (context) {
 
 ```js
 function asyncRetry(fn, times, timeout = 0) {
-  // fn必需
-  // times必需，且为大于0的正整数
-  times = parseInt(times);
-  if(times <= 0 || isNaN(times)) {
-    throw new TypeError("times必需是大于0的正整数");
-  }
-  // Number.isInteger()
+    // fn必需
+    // times必需，且为大于0的正整数
+    times = parseInt(times);
+    if (times <= 0 || isNaN(times)) {
+        throw new TypeError('times必需是大于0的正整数');
+    }
+    // Number.isInteger()
 
-  return Promise.race([
-    // 错误后重复
-    new Promise(async (resolve, reject) => {
-      while(times--) {
-        try {
-          const res = await fn();
-          resolve(res);
-          break;
-        } catch (error) {
-          if(times <= 0) {
-            reject("retry error");
-          }
-        }
-      }
-    }),
-    // 超时任务
-    new Promise((resolve, reject) => {
-      setTimeout(() => {
-        reject("retry error");
-      }, timeout)
-    })
-  ]);
+    return Promise.race([
+        // 错误后重复
+        new Promise(async (resolve, reject) => {
+            while (times--) {
+                try {
+                    const res = await fn();
+                    resolve(res);
+                    break;
+                } catch (error) {
+                    if (times <= 0) {
+                        reject('retry error');
+                    }
+                }
+            }
+        }),
+        // 超时任务
+        new Promise((resolve, reject) => {
+            setTimeout(() => {
+                reject('retry error');
+            }, timeout);
+        }),
+    ]);
 }
 ```
 
