--- a/_posts/2024-03-29-mock 方案.md
+++ b/_posts/2024-03-29-mock 方案.md
@@ -17,17 +17,20 @@ tags:
 
 ### 平台工具
 
-* Yapi: 具备权限管理、Mock、数据导入、自动化测试等功能
-* Apifox，相当于 Postman + Swagger + Mock + JMeter 组合。
+-   Yapi: 具备权限管理、Mock、数据导入、自动化测试等功能
+-   Apifox，相当于 Postman + Swagger + Mock + JMeter 组合。
 
 ### 请求拦截
-* MockJs: 拦截请求，返回模拟数据
-* MSW + Faker: Mock Service Worker 拦截请求 + Faker.js 生成模拟数据
+
+-   MockJs: 拦截请求，返回模拟数据
+-   MSW + Faker: Mock Service Worker 拦截请求 + Faker.js 生成模拟数据
 
 ### 浏览器插件
-* [Requestly: Open Source HTTPs Debugging Proxy (Chrome 应用商店)](https://chromewebstore.google.com/detail/requestly-intercept-modif/mdnleldcmiljblolnjhpnblkcekpdkpa?hl=zh-CN&utm_source=ext_sidebar)
-* [Mock:Intercept and directly return data](https://chromewebstore.google.com/detail/mockintercept-and-directl/kmphamhphplpcjcabjdjjklfjmgkmpba?utm_source=ext_sidebar&hl=zh-CN)
+
+-   [Requestly: Open Source HTTPs Debugging Proxy (Chrome 应用商店)](https://chromewebstore.google.com/detail/requestly-intercept-modif/mdnleldcmiljblolnjhpnblkcekpdkpa?hl=zh-CN&utm_source=ext_sidebar)
+-   [Mock:Intercept and directly return data](https://chromewebstore.google.com/detail/mockintercept-and-directl/kmphamhphplpcjcabjdjjklfjmgkmpba?utm_source=ext_sidebar&hl=zh-CN)
 
 ### 本地服务
-* [json-server](https://github.com/typicode/json-server): 可以通过一个 JSON 文件快速创建一个模拟的API服务器
-* 自建服务器：express...
+
+-   [json-server](https://github.com/typicode/json-server): 可以通过一个 JSON 文件快速创建一个模拟的 API 服务器
+-   自建服务器：express...
