--- a/_posts/2023-11-08-Nodejs.md
+++ b/_posts/2023-11-08-Nodejs.md
@@ -1,8 +1,8 @@
 ---
-layout:     post
-title:      Nodejs
-date:       2023-11-08
-author:     shaokang
+layout: post
+title: Nodejs
+date: 2023-11-08
+author: shaokang
 header-img:
 catalog: true
 tags:
@@ -12,43 +12,50 @@ tags:
 # Nodejs
 
 ## 1.介绍
+
 node.js 它既是开发平台, 也是运行环境, 也是个新的语言。它本身是基于 google 的 javascript v8 引擎开发的。
 
 ## 2.特点
-- 事件驱动
-- 异步编程
-- 非阻塞 I/O 模型
-- 单线程
+
+-   事件驱动
+-   异步编程
+-   非阻塞 I/O 模型
+-   单线程
 
 ### 2.1 非阻塞异步
-Nodejs采用了非阻塞型I/O机制，在做I/O操作的时候不会造成任何的阻塞，当完成之后，以事件的形式通知执行操作。
+
+Nodejs 采用了非阻塞型 I/O 机制，在做 I/O 操作的时候不会造成任何的阻塞，当完成之后，以事件的形式通知执行操作。
 
 例如在执行了访问数据库的代码之后，将立即转而执行其后面的代码，把数据库返回结果的处理代码放在回调函数中，从而提高了程序的执行效率。
 
 ### 2.2 事件驱动
+
 事件驱动就是当进来一个新的请求的时，请求将会被压入一个事件队列中，然后通过一个循环来检测队列中的事件状态变化，如果检测到有状态变化的事件，那么就执行该事件对应的处理代码，一般都是回调函数。
 
 ## 优缺点
-- 优点：
-  - 高并发
-  - 适合 I/O 密集型应用
 
-- 缺点：
-  - 不适合 CPU 密集型应用
-  - 只支持单核 CPU，无法利用多核 CPU
-  - 可靠性低，一旦代码某个环节崩溃，整个系统都崩溃
+-   优点：
+
+    -   高并发
+    -   适合 I/O 密集型应用
+
+-   缺点：
+    -   不适合 CPU 密集型应用
+    -   只支持单核 CPU，无法利用多核 CPU
+    -   可靠性低，一旦代码某个环节崩溃，整个系统都崩溃
 
 ## 应用场景
+
 借助 Nodejs 的特点和弊端，其应用场景分类如下：
 
-* 善于I/O，不善于计算。因为Nodejs是一个单线程，如果计算（同步）太多，则会阻塞这个线程
-* 大量并发的I/O，应用程序内部并不需要进行非常复杂的处理
-与 websocket 配合，开发长连接的实时交互应用程序
+-   善于 I/O，不善于计算。因为 Nodejs 是一个单线程，如果计算（同步）太多，则会阻塞这个线程
+-   大量并发的 I/O，应用程序内部并不需要进行非常复杂的处理
+    与 websocket 配合，开发长连接的实时交互应用程序
 
 具体场景可以表现为如下：
 
-* 第一大类：用户表单收集系统、后台管理系统、实时交互系统、考试系统、联网软件、高并发量的web应用程序
-* 第二大类：基于web、canvas等多人联网游戏
-* 第三大类：基于web的多人实时聊天客户端、聊天室、图文直播
-* 第四大类：单页面浏览器应用程序
-* 第五大类：操作数据库、为前端和移动端提供基于json的API
+-   第一大类：用户表单收集系统、后台管理系统、实时交互系统、考试系统、联网软件、高并发量的 web 应用程序
+-   第二大类：基于 web、canvas 等多人联网游戏
+-   第三大类：基于 web 的多人实时聊天客户端、聊天室、图文直播
+-   第四大类：单页面浏览器应用程序
+-   第五大类：操作数据库、为前端和移动端提供基于 json 的 API
