--- a/_posts/2022-03-09-算法.md
+++ b/_posts/2022-03-09-算法.md
@@ -558,8 +558,89 @@ var search = function (nums, target) {
 };
 ```
 
+## 二叉树
+
+### 二叉树的遍历
+
+二叉树遍历框架：
+
+```js
+var traverse = function (root) {
+    if (root === null) {
+        return;
+    }
+    // 前序位置
+    traverse(root.left);
+    // 中序位置
+    traverse(root.right);
+    // 后序位置
+};
+```
+
+前序位置的代码在刚刚进入一个二叉树节点的时候执行；
+
+后序位置的代码在将要离开一个二叉树节点的时候执行；
+
+中序位置的代码在一个二叉树节点左子树都遍历完，即将开始遍历右子树的时候执行。
+
+### 二叉树的解法框架
+
+二叉树题目的递归解法可以分两类思路，第一类是遍历一遍二叉树得出答案，第二类是通过分解问题计算出答案，这两类思路分别对应着 回溯算法核心框架 和 动态规划核心框架。
+
+以求二叉树的最大深度为例：
+
+① 遍历一遍二叉树，得到答案
+
+```js
+var res = 0;
+// 记录遍历到的节点的深度
+var depth = 0;
+
+// 主函数
+function maxDepth(root) {
+    traverse(root);
+    return res;
+}
+
+// 二叉树遍历框架
+function traverse(root) {
+    if (root == null) {
+        return;
+    }
+    // 前序位置
+    depth++;
+    if (root.left == null && root.right == null) {
+        // 到达叶子节点，更新最大深度
+        res = Math.max(res, depth);
+    }
+    traverse(root.left);
+    traverse(root.right);
+    // 后序位置
+    depth--;
+}
+```
+
+② 通过分解问题计算出答案
+
+```js
+var maxDepth = function (root) {
+    if (root == null) {
+        return 0;
+    }
+    // 利用定义，计算左右子树的最大深度
+    var leftMax = maxDepth(root.left);
+    var rightMax = maxDepth(root.right);
+    // 整棵树的最大深度等于左右子树的最大深度取最大值，
+    // 然后再加上根节点自己
+    var res = Math.max(leftMax, rightMax) + 1;
+
+    return res;
+};
+```
+
 ## 相关的算法手册网址
 
 -   [代码随想录](https://programmercarl.com/)
 -   [labuladong 的算法笔记](https://labuladong.github.io/algo/home/)
 -   [算法通关手册](https://algo.itcharge.cn)
+-   [hello 算法](https://www.hello-algo.com/)
